--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <li class="header">功能导航</li>
                 <!-- Optionally, you can add icons to the links -->
                 <li id="menuWelcome" class="leftMenu"><a
-                        href="index.html"><span>欢迎使用</span></a></li>
+                        href="./index.html"><span>欢迎使用</span></a></li>
                 <!--<li class="treeview" id="menuCenter"><a href="#"><i class="fa  fa-smile-o"></i><span>个人中心</span>-->
                     <!--<i class="fa fa-angle-left pull-right"></i></a>-->
                     <!--<ul class="treeview-menu">-->
