--- a/pages/testData/import_list.html
+++ b/pages/testData/import_list.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="cn">
     <meta charset="UTF-8">
-    <title>测试数据管理后台-Banner管理</title>
+    <title>测试数据管理后台-数据导入</title>
     <meta
             content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no'
             name='viewport'>
@@ -117,7 +117,7 @@
                 <li class="header">功能导航</li>
                 <!-- Optionally, you can add icons to the links -->
                 <li id="menuWelcome" class="leftMenu"><a
-                        href="index.html"><span>欢迎使用</span></a></li>
+                        href="../../index.html"><span>欢迎使用</span></a></li>
                 <li class="treeview" id="menuTestData"><a href="#"><i
                         class="fa  fa-book"></i><span>数据管理</span>
                     <i class="fa fa-angle-left pull-right"></i></a>
@@ -152,8 +152,12 @@
                         <div class="box-body">
                             <div class="row">
                                 <div class="modal-body">
+                                    <div class="col-xs-2">
+                                        <label
+                                                class="control-label">选择Excel文件:</label>
+                                    </div>
                                     <div class="col-xs-4">
-                                        <button class="btn btn-success btn-flat"
+                                        <button class="btn btn-primary btn-flat"
                                                 id="btnUploadExcel">选择文件
                                         </button>
                                     </div>
