--- a/pages/testData/import_list.html
+++ b/pages/testData/import_list.html
@@ -125,8 +125,8 @@
                         <li id="menuTestData_importList"><a
                                 href="../testData/import_list.html"><i
                                 class="fa fa-circle-o"></i>数据导入</a></li>
-                        <li id="menuProduct_dayExportList"><a
-                                href="#"><i
+                        <li id="menuTestDate_dayExportList"><a
+                                href="../testData/export_list.html"><i
                                 class="fa fa-circle-o"></i>每日导出</a></li>
                     </ul>
                 </li>
