--- a/pages/testData/export_list.html
+++ b/pages/testData/export_list.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="cn">
     <meta charset="UTF-8">
-    <title>测试数据管理后台-Banner管理</title>
+    <title>测试数据管理后台-每日导出列表</title>
     <meta
             content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no'
             name='viewport'>
